--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,21 +22,9 @@
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
 	<body>
-		<!-- 00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
-
-  Explore -->
-		<div class="container">
-			<h1>Design system</h1>
-			<section class="colors"></section>
-		</div>
+		00 Home 01 Destination 02 Crew 03 Technology So, you want to travel to Space
+		Let’s face it; if you want to go to space, you might as well genuinely go to
+		outer space and not hover kind of on the edge of it. Well sit back, and
+		relax because we’ll give you a truly out of this world experience! Explore
 	</body>
 </html>
