--- a/design-system.html
+++ b/design-system.html
@@ -206,11 +206,12 @@
 						</div>
 						<!-- Numbers -->
 						<div
-							class="number-indicators flex"
+							class="number-indicators"
 							style="
+								display: inline-flex;
 								flex-direction: column;
-								align-items: center;
-								aspect-ratio: 1;
+								margin-inline: 5rem;
+								gap: var(--gap, 1rem);
 							"
 						>
 							<button
