Added mobile styling and mobile navigation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		/>
 		<link rel="stylesheet" href="index.css" />
 		<title>Frontend Mentor | Space tourism website</title>
+		<script src="index.js" defer></script>
 	</head>
 	<body class="home">
 		<header class="primary-header flex">
@@ -29,9 +30,20 @@
 					class="logo"
 				/>
 			</div>
+			<button
+				class="mobile-nav-toggle"
+				aria-controls="primary-navigation"
+				aria-expanded="false"
+			>
+				<span class="sr-only">Menu</span>
+			</button>
 			<nav>
-				<ul class="primary-navigation underline-indicators flex">
-					<li>
+				<ul
+					id="primary-navigation"
+					data-visible="false"
+					class="primary-navigation underline-indicators flex"
+				>
+					<li class="active">
 						<a
 							class="ff-sans-cond uppercase text-white letter-spacing-2"
 							href="index.html"
