--- a/crew-commander.html
+++ b/crew-commander.html
@@ -21,7 +21,7 @@
 		<title>Frontend Mentor | Space tourism website</title>
 		<script src="index.js" defer></script>
 	</head>
-	<body class="destination">
+	<body class="crew">
 		<a class="skip-to-content" href="#main">Skip to content</a>
 		<header class="primary-header flex">
 			<div>
@@ -75,63 +75,47 @@
 				</ul>
 			</nav>
 		</header>
-		<main id="main" class="grid-container grid-container--destination flow">
+		<main id="main" class="grid-container grid-container--crew flow">
 			<h1 class="numbered-title">
-				<span aria-hidden="true">01</span> Pick your destination
+				<span aria-hidden="true">02</span> Meet your crew
 			</h1>
-			<picture>
-				<source
-					srcset="./assets/destination/image-moon.webp"
-					type="image/webp"
-				/>
-				<img src="./assets/destination/image-moon.png" alt="the moon" />
-			</picture>
 
-			<div class="tab-list flex underline-indicators">
-				<button
-					aria-selected="true"
-					class="uppercase text-accent ff-sans-cond letter-spacing-2"
-				>
-					Moon
+			<div class="dot-indicators flex" style="justify-content: center">
+				<button aria-selected="true">
+					<span class="sr-only">The commander</span>
 				</button>
-				<button
-					aria-selected="false"
-					class="uppercase text-accent ff-sans-cond letter-spacing-2"
-				>
-					Mars
+				<button aria-selected="false">
+					<span class="sr-only">The mission specialist</span>
 				</button>
-				<button
-					aria-selected="false"
-					class="uppercase text-accent ff-sans-cond letter-spacing-2"
-				>
-					Europa
+				<button aria-selected="false">
+					<span class="sr-only">The pilot</span>
 				</button>
-				<button
-					aria-selected="false"
-					class="uppercase text-accent ff-sans-cond letter-spacing-2"
-				>
-					Titan
+				<button aria-selected="false">
+					<span class="sr-only">The crew engineer</span>
 				</button>
 			</div>
-			<article class="destination-info flow">
-				<h2 class="ff-serif uppercase fs-800">Moon</h2>
-				<p>
-					See our planet as you’ve never seen it before. A perfect relaxing trip
-					away to help regain perspective and come back refreshed. While you’re
-					there, take in some history by visiting the Luna 2 and Apollo 11
-					landing sites.
+			<article class="crew-details flow">
+				<header class="flow flow--space-small">
+					<h2 class="ff-serif uppercase text-white fs-600">Commander</h2>
+					<p class="ff-serif uppercase fs-700">Douglas Hurley</p>
+				</header>
+
+				<p class="text-accent">
+					Douglas Gerald Hurley is an American engineer, former Marine Corps
+					pilot and former NASA astronaut. He launched into space for the third
+					time as commander of Crew Dragon Demo-2.
 				</p>
-				<div class="destination-meta flex">
-					<div>
-						<h3 class="text-accent fs-200 uppercase">Avg. distance</h3>
-						<p class="ff-serif uppercase">384,400 km</p>
-					</div>
-					<div>
-						<h3 class="text-accent fs-200 uppercase">Est. travel time</h3>
-						<p class="ff-serif uppercase">3 days</p>
-					</div>
-				</div>
 			</article>
+			<picture>
+				<source
+					srcset="./assets/crew/image-douglas-hurley.webp"
+					type="image/webp"
+				/>
+				<img
+					src="./assets/crew/image-douglas-hurley.png"
+					alt="Douglas Hurley"
+				/>
+			</picture>
 		</main>
 	</body>
 </html>
