Fixed active state styling on navbar

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			</div>
 			<div>
 				<a
-					href="#"
+					href="./destination.html"
 					class="large-button uppercase bg-white text-dark ff-serif"
 					style="text-decoration: none"
 					>Explore</a
