Added technology page

--- a/design-system.html
+++ b/design-system.html
@@ -206,13 +206,8 @@
 						</div>
 						<!-- Numbers -->
 						<div
-							class="number-indicators"
-							style="
-								display: inline-flex;
-								flex-direction: column;
-								margin-inline: 5rem;
-								gap: var(--gap, 1rem);
-							"
+							class="number-indicators inline-flex"
+							style="flex-direction: column; margin-inline: 5rem"
 						>
 							<button
 								aria-selected="true"
