Added technology page and styling

--- a/design-system.html
+++ b/design-system.html
@@ -213,19 +213,19 @@
 								aria-selected="true"
 								class="text-white ff-serif fs-600 bg-dark"
 							>
-								1
+								<span class="sr-only">Launch vehicle</span>
 							</button>
 							<button
 								aria-selected="false"
 								class="text-white ff-serif fs-600 bg-dark"
 							>
-								2
+								<span class="sr-only">Spaceport</span>
 							</button>
 							<button
 								aria-selected="false"
 								class="text-white ff-serif fs-600 bg-dark"
 							>
-								3
+								<span class="sr-only">Space capsule</span>
 							</button>
 						</div>
 					</div>
