--- a/design-system.html
+++ b/design-system.html
@@ -12,7 +12,7 @@
 			rel="stylesheet"
 		/>
 
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="./css/styles.css" />
 		<title>Design System</title>
 	</head>
 	<body>
