--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="./css/styles.css" />
 		<title>Frontend Mentor | Space tourism website</title>
 		<script src="navigation.js" defer></script>
 	</head>
